--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Brian Wang",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/firestore": "^7.10.0",
     "discord-interactions": "^4.1.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
