--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "nodemon ./dist/app.js",
     "compile": "npx tsc",
-    "run": "node ./dist/app.js"
+    "start": "node ./dist/app.js"
   },
   "author": "Brian Wang",
   "license": "ISC",
@@ -22,6 +22,7 @@
     "@tsconfig/node20": "^20.1.4",
     "@types/express": "^5.0.0",
     "@types/node": "^22.7.3",
+    "@vercel/ncc": "^0.38.3",
     "nodemon": "^3.1.7",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
