--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "\"Scoreboard bot for keeping track of discord competitions\"",
   "main": "app.js",
   "scripts": {
-    "dev": "nodemon ./dist/app.js",
+    "dev": "nodemon",
     "compile": "npx tsc",
     "start": "node ./dist/index.js"
   },
