--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "strict": true,
     "compilerOptions": {
       "allowJs": true,
-      "outDir": "dist"
+      "outDir": "./dist"
     },
     "include": ["src/**/*"],
     "exclude": ["node_modules"]
